# forma

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START.md  README.md  TODO.md  docker-compose.yml  example-prompt.txt  iOS_SETUP.md  playwright.config.py  pyproject.toml
FormaWorkout/: README.md
FormaWorkout/FormaWorkout/: Info.plist
migrations/: 000_initial.sql  001_sessions.sql  002_llm_usage.sql  003_llm_usage_athlete.sql  004_drop_is_default.sql  005_proper_date_types.sql  006_athletes_columns.sql  007_workouts_analytics_columns.sql  008_timestamptz.sql  009_workout_metric_float_columns.sql  011_recap_cache_to_blob.sql  012_foreign_keys.sql  013_drop_experience.sql  014_normalize_athlete_columns.sql  015_drop_chat_workout_fk.sql  016_drop_recap_cache.sql  016_sync_state.sql  017_backfill_detail_fetched.sql  017_system_prompts.sql  018_fix_sync_state_complete.sql  018_system_prompt_model.sql  019_feedback.sql  020_drop_insights_cache.sql  021_exercise_catalog.sql  021_update_plan_prompt.sql
scripts/: migrate_sqlite_to_postgres.py  visual_compare.py
src/fitness_coach/: __init__.py  config.py
src/forma/: __init__.py  __main__.py  config.py  logging_config.py
tests/: conftest.py  test_smoke.py
tests/adapters/: test_postgres_insights_cache.py  test_postgres_plan_cache.py  test_postgres_recap_cache.py  test_postgres_storage.py  test_postgres_system_prompts.py  test_sqlite_activity_analysis.py  test_sqlite_analytics.py  test_sqlite_chat.py  test_sqlite_execution_session.py  test_sqlite_insights_cache.py  (+5 more)
(+214 files in other folders)
